--- a/smcapp/templates/smcapp/index.htm
+++ b/smcapp/templates/smcapp/index.htm
@@ -16,8 +16,10 @@
 		</h1>
 	</header>
 	<main>
-		<a href="{% url 'login' %}" class="button">Login</a>
-		<a href="{% url 'register' %}" class="button">Register</a>
+		<div class="button-container">
+			<a href="{% url 'login' %}" class="button">Login</a>
+			<a href="{% url 'register' %}" class="button">Register</a>
+		</div>
 	</main>
 
 </body>
