--- a/smcapp/templates/smcapp/reg_form.htm
+++ b/smcapp/templates/smcapp/reg_form.htm
@@ -2,7 +2,7 @@
 <html lang="en-US">
 
 <head>
-	<title>SmartHealthCounseling</title>
+	<title>SmartHealthConsulting</title>
 	<meta charset="UTF-8">
 	{% load staticfiles %}
 	<link rel="stylesheet" href="{% static 'smcapp/styles.css' %}" type='text/css' />
@@ -12,30 +12,31 @@
 
 	<header>
 		<h1>
-		Smart Health Counseling
+		Smart Health Consulting
 		</h1>
 	</header>
 
-	<div>
-		<br><br>
-		<h2>Register:</h2>
-		<!-- "login_page.py" is a temporary holder name, can be changed -->
-		<form method="post">
-			<!-- csrf_token is security. Makes it a more secure means of sending data through the HTTP protocols -->
-			{% csrf_token %}
+	<main class="container">
+		<div>
+			<br><br>
+			<h2>Register:</h2>
 
-			<!-- <table border="0"> 
-            	{{ form }}
-            </table> -->
+			<form method="post">
+				<!-- csrf_token is security. Makes it a more secure means of sending data through the HTTP protocols -->
+				{% csrf_token %}
 
-			{{ form.as_p }}
+				<!-- <table border="0">
+	            	{{ form }}
+	            </table> -->
 
-			<!-- looking for a way to make it look better without getting rid of the default django stuff -->
+					{{ form.as_p }}
 
-			<input type="submit" value="Register">
-		
-		</form>	
-	</div>
+				<!-- looking for a way to make it look better without getting rid of the default django stuff -->
 
+				<input type="submit" value="Register">
+
+			</form>
+		</div>
+	</main>
 </body>
 </html>
