Added database login functionality.

--- a/smcapp/templates/smcapp/login.htm
+++ b/smcapp/templates/smcapp/login.htm
@@ -20,7 +20,7 @@
 			<div>
 				<h2>Sign in to access your account:</h2>
 				<!-- "login_page.py" is a temporary holder name, can be changed -->
-				<form action="/smcapp/" method="post">
+				<form action="/smcapp/login/" method="post">
 					{% csrf_token %}
 					{% for field in form %}
 
