--- a/smcapp/templates/smcapp/login.htm
+++ b/smcapp/templates/smcapp/login.htm
@@ -17,28 +17,21 @@
 	</header>
 
 	<main class="container">
-			<div>
-				<h2>Sign in to access your account:</h2>
-				<!-- "login_page.py" is a temporary holder name, can be changed -->
-				<form action="/smcapp/login/" method="post">
-					{% csrf_token %}
-					{% for field in form %}
+		<div>
+			<h2>Sign in to access your account:</h2>
+			<!-- "login_page.py" is a temporary holder name, can be changed -->
+			<form action="/smcapp/login/" method="post">
+				{% csrf_token %}
+				{{ form.as_p }}
 
-						{{ field.errors }}
-						{{ field.label_tag }}
+				<!-- <input type="text" id="email" name="username" placeholder="Username or Email"><br>
 
-						<input type="text" maxlength="30" style="width:300;" id="{{ field.auto_id }}" name="{{ field.html_name }}"/>
+				<input type="text" id="pass" name="password" placeholder="Password"><br> -->
 
-					{% endfor %}
+				<input type="submit" value="Login">
 
-					<!-- <input type="text" id="email" name="username" placeholder="Username or Email"><br>
-
-					<input type="text" id="pass" name="password" placeholder="Password"><br> -->
-
-					<input type="submit" value="Login">
-
-				</form>
-			</div>
+			</form>
+		</div>
 	</main>
 
 </body>
